--- a/src/SecureNotebookWindow.form
+++ b/src/SecureNotebookWindow.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-16666671"/>
+    </properties>
     <border type="none"/>
     <children>
       <hspacer id="24e11">
@@ -41,6 +43,8 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-1"/>
+          <foreground color="-1"/>
           <text value="My Notebook"/>
         </properties>
       </component>
