--- a/src/SecureNotebookMenu.form
+++ b/src/SecureNotebookMenu.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <scrollpane id="4ce25">
+      <scrollpane id="4ce25" binding="scrollPane">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -21,7 +21,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="3dffe" class="javax.swing.JButton" binding="button1" default-binding="true">
+              <component id="3dffe" class="javax.swing.JButton" binding="textFile1Option">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
