--- a/src/SecureNotebookMenu.form
+++ b/src/SecureNotebookMenu.form
@@ -5,20 +5,27 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-16666671"/>
+      <font name="Verdana"/>
+    </properties>
     <border type="none"/>
     <children>
       <scrollpane id="4ce25" binding="scrollPane">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-16666671"/>
+        </properties>
         <border type="none"/>
         <children>
           <grid id="68b64" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints/>
-            <properties/>
+            <properties>
+              <background color="-16666671"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="3dffe" class="javax.swing.JButton" binding="textFile1Option">
@@ -26,47 +33,47 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Button"/>
+                  <text value="Text File 1"/>
                 </properties>
               </component>
-              <component id="554d6" class="javax.swing.JButton" binding="button2" default-binding="true">
+              <component id="554d6" class="javax.swing.JButton" binding="textFile6Option">
                 <constraints>
                   <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Button"/>
+                  <text value="Text File 6"/>
                 </properties>
               </component>
-              <component id="33b03" class="javax.swing.JButton" binding="button3" default-binding="true">
+              <component id="33b03" class="javax.swing.JButton" binding="textFile5Option">
                 <constraints>
                   <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Button"/>
+                  <text value="Text File 5"/>
                 </properties>
               </component>
-              <component id="5a766" class="javax.swing.JButton" binding="button4" default-binding="true">
+              <component id="5a766" class="javax.swing.JButton" binding="textFile4Option">
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Button"/>
+                  <text value="Text File 4"/>
                 </properties>
               </component>
-              <component id="34710" class="javax.swing.JButton" binding="button5" default-binding="true">
+              <component id="34710" class="javax.swing.JButton" binding="textFile3Option">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Button"/>
+                  <text value="Text File 3"/>
                 </properties>
               </component>
-              <component id="d36b1" class="javax.swing.JButton" binding="button6" default-binding="true">
+              <component id="d36b1" class="javax.swing.JButton" binding="textFile2Option">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Button"/>
+                  <text value="Text File 2"/>
                 </properties>
               </component>
               <component id="b0b58" class="javax.swing.JButton" binding="quitButton" default-binding="true">
@@ -106,6 +113,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Verdana"/>
           <text value="Secure Notebook"/>
         </properties>
       </component>
